revert to before update

--- a/locale/data/blueprints.xml.append/en.po
+++ b/locale/data/blueprints.xml.append/en.po
@@ -12,3 +12,256 @@ msgstr "Mind Control Accelerator"
 #: src-en/data/blueprints.xml.append:3
 msgid "data/blueprints.xml.append$//augBlueprint[@name=\"FAST_MIND\"]/desc"
 msgstr "Reduces the cooldown of the Mind Control System by 5 seconds."
+
+#: src-en/data/blueprints.xml.append:12
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"FAST_CLOAK\"]/title"
+msgstr "Cloaking Accelerator"
+
+#: src-en/data/blueprints.xml.append:13
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"FAST_CLOAK\"]/desc"
+msgstr "Reduces the cooldown of the Cloaking System by 5 seconds."
+
+#: src-en/data/blueprints.xml.append:22
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"FAST_HACK\"]/title"
+msgstr "Hacking Accelerator"
+
+#: src-en/data/blueprints.xml.append:23
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"FAST_HACK\"]/desc"
+msgstr "Reduces the cooldown of the Hacking System by 5 seconds."
+
+#: src-en/data/blueprints.xml.append:32
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"FAST_TEMPORAL\"]/title"
+msgstr "Temporal Accelerator"
+
+#: src-en/data/blueprints.xml.append:33
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"FAST_TEMPORAL\"]/desc"
+msgstr "Reduces the cooldown of the Temporal System by 5 seconds."
+
+#: src-en/data/blueprints.xml.append:42
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"FAST_TELEPORT\"]/title"
+msgstr "Teleporter Accelerator"
+
+#: src-en/data/blueprints.xml.append:43
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"FAST_TELEPORT\"]/desc"
+msgstr "Reduces the cooldown of the Teleporter System by 5 seconds."
+
+#: src-en/data/blueprints.xml.append:52
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"FAST_BATTERY\"]/title"
+msgstr "Battery Accelerator"
+
+#: src-en/data/blueprints.xml.append:53
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"FAST_BATTERY\"]/desc"
+msgstr "Reduces the cooldown of the Temporal System by 5 seconds."
+
+#: src-en/data/blueprints.xml.append:62
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"LONG_MIND\"]/title"
+msgstr "Mind Control Lengthener"
+
+#: src-en/data/blueprints.xml.append:63
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"LONG_MIND\"]/desc"
+msgstr "Doubles the length of the Mind Control System's uptime."
+
+#: src-en/data/blueprints.xml.append:72
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"LONG_HACK\"]/title"
+msgstr "Hacking Lengthener"
+
+#: src-en/data/blueprints.xml.append:73
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"LONG_HACK\"]/desc"
+msgstr "Doubles the length of the Hacking System's uptime."
+
+#: src-en/data/blueprints.xml.append:81
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"LONG_BATTERY\"]/title"
+msgstr "Battery Lengthener"
+
+#: src-en/data/blueprints.xml.append:82
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"LONG_BATTERY\"]/desc"
+msgstr "Doubles the length of the Battery System's uptime."
+
+#: src-en/data/blueprints.xml.append:91
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"HACKING_DAMAGE\"]/title"
+msgstr "Corrosive Hacking"
+
+#: src-en/data/blueprints.xml.append:92
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"HACKING_DAMAGE\"]/desc"
+msgstr "The Hacking System now does system damage."
+
+#: src-en/data/blueprints.xml.append:101
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"IMMUNE\"]/title"
+msgstr "Total Immunity"
+
+#: src-en/data/blueprints.xml.append:102
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"IMMUNE\"]/desc"
+msgstr ""
+"Immunity to all forms of damage, fires, breaches, and sabotage. You can't "
+"hurt me, Jack."
+
+#: src-en/data/blueprints.xml.append:109
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"IMMUNE_2\"]/title"
+msgstr "True Total Immunity"
+
+#: src-en/data/blueprints.xml.append:110
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"IMMUNE_2\"]/desc"
+msgstr ""
+"Immunity to all forms of damage, fires, breaches, and sabotage, fires and "
+"breaches cannot be created by guns. You can't hurt me, Jack."
+
+#: src-en/data/blueprints.xml.append:118
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"FAST_WEAPONS\"]/title"
+msgstr "Fast Weapons"
+
+#: src-en/data/blueprints.xml.append:119
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"FAST_WEAPONS\"]/desc"
+msgstr "Speeds up weapon charging by 10x"
+
+#: src-en/data/blueprints.xml.append:128
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"FASTER_WEAPONS\"]/title"
+msgstr "Faster Weapons"
+
+#: src-en/data/blueprints.xml.append:129
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"FASTER_WEAPONS\"]/desc"
+msgstr "Speeds up weapon charging by 50x"
+
+#: src-en/data/blueprints.xml.append:137
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"FASTEST_WEAPONS\"]/title"
+msgstr "Fastest Weapons"
+
+#: src-en/data/blueprints.xml.append:138
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"FASTEST_WEAPONS\"]/desc"
+msgstr "Speeds up weapon charging by 10,000x"
+
+#: src-en/data/blueprints.xml.append:146
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"WEAPON_LOCKDOWN\"]/title"
+msgstr "Weapon Lockdown Core"
+
+#: src-en/data/blueprints.xml.append:147
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"WEAPON_LOCKDOWN\"]/desc"
+msgstr "Causes all non-beam weapons to apply lockdown"
+
+#: src-en/data/blueprints.xml.append:157
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"AUG_BEAM_PIERCE\"]/title"
+msgstr "Beam Phase Frequencies"
+
+#: src-en/data/blueprints.xml.append:158
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"AUG_BEAM_PIERCE\"]/desc"
+msgstr "Grants all beam weapons +1 shield piercing."
+
+#: src-en/data/blueprints.xml.append:165
+msgid ""
+"data/blueprints.xml.append$//augBlueprint[@name=\"AUG_EVERYTHING_PIERCE\"]/title"
+msgstr "Literally Everything Phase Frequencies"
+
+#: src-en/data/blueprints.xml.append:166
+msgid ""
+"data/blueprints.xml.append$//augBlueprint[@name=\"AUG_EVERYTHING_PIERCE\"]/desc"
+msgstr "Grants all weapons +1 shield piercing."
+
+#: src-en/data/blueprints.xml.append:174
+msgid ""
+"data/blueprints.xml.append$//augBlueprint[@name=\"AUG_BEAM_PIERCE_DRONE\"]/title"
+msgstr "Beam Phase Frequencies"
+
+#: src-en/data/blueprints.xml.append:175
+msgid ""
+"data/blueprints.xml.append$//augBlueprint[@name=\"AUG_BEAM_PIERCE_DRONE\"]/desc"
+msgstr "Grants all beam drones +1 shield piercing."
+
+#: src-en/data/blueprints.xml.append:182
+msgid ""
+"data/blueprints.xml.append$//augBlueprint[@name=\"AUG_EVERYTHING_PIERCE_DRONE\"]/title"
+msgstr "Literally Everything Phase Frequencies"
+
+#: src-en/data/blueprints.xml.append:183
+msgid ""
+"data/blueprints.xml.append$//augBlueprint[@name=\"AUG_EVERYTHING_PIERCE_DRONE\"]/desc"
+msgstr "Grants all drones +1 shield piercing."
+
+#: src-en/data/blueprints.xml.append:192
+msgid ""
+"data/blueprints.xml.append$//augBlueprint[@name=\"RADIUS_REDUCTION\"]/title"
+msgstr "Radius Reduction"
+
+#: src-en/data/blueprints.xml.append:193
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"RADIUS_REDUCTION\"]/desc"
+msgstr "Reduces weapon radius by 10."
+
+#: src-en/data/blueprints.xml.append:201
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"FIRE_IMMUNITY\"]/title"
+msgstr "Fire Immunity"
+
+#: src-en/data/blueprints.xml.append:202
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"FIRE_IMMUNITY\"]/desc"
+msgstr "Systems don't take fire damage."
+
+#: src-en/data/blueprints.xml.append:212
+msgid ""
+"data/blueprints.xml.append$//augBlueprint[@name=\"DEIONIZATION_BOOST\"]/title"
+msgstr "Deipnization Booster"
+
+#: src-en/data/blueprints.xml.append:213
+msgid ""
+"data/blueprints.xml.append$//augBlueprint[@name=\"DEIONIZATION_BOOST\"]/desc"
+msgstr "Ion damage is removed faster."
+
+#: src-en/data/blueprints.xml.append:223
+msgid ""
+"data/blueprints.xml.append$//augBlueprint[@name=\"FMCORE_NO_BREACH\"]/title"
+msgstr "Breach Repellent"
+
+#: src-en/data/blueprints.xml.append:224
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"FMCORE_NO_BREACH\"]/desc"
+msgstr "Reduces breach chance of attack by 10%"
+
+#: src-en/data/blueprints.xml.append:232
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"FMCORE_NO_FIRE\"]/title"
+msgstr "Fire Repellent"
+
+#: src-en/data/blueprints.xml.append:233
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"FMCORE_NO_FIRE\"]/desc"
+msgstr "Reduces fire chance of attack by 10%"
+
+#: src-en/data/blueprints.xml.append:241
+msgid ""
+"data/blueprints.xml.append$//augBlueprint[@name=\"FMCORE_ASTEROID_RESIST_HULL\"]/title"
+msgstr "Anti-Asteroid Plating"
+
+#: src-en/data/blueprints.xml.append:242
+msgid ""
+"data/blueprints.xml.append$//augBlueprint[@name=\"FMCORE_ASTEROID_RESIST_HULL\"]/desc"
+msgstr "Asteroids do no damage to your ship."
+
+#: src-en/data/blueprints.xml.append:251
+msgid ""
+"data/blueprints.xml.append$//augBlueprint[@name=\"FMCORE_ASTEROID_RESIST_SHIELD\"]/title"
+msgstr "Anti-Asteroid Shielding"
+
+#: src-en/data/blueprints.xml.append:252
+msgid ""
+"data/blueprints.xml.append$//augBlueprint[@name=\"FMCORE_ASTEROID_RESIST_SHIELD\"]/desc"
+msgstr "Asteroids do not pop shields."
+
+#: src-en/data/blueprints.xml.append:291
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"AUTOMATED_SHIP\"]/title"
+msgstr "Automated Ship Function"
+
+#: src-en/data/blueprints.xml.append:292
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"AUTOMATED_SHIP\"]/desc"
+msgstr "Makes your ship auto. YOU SHOULD NEVER SEE THIS."
+
+#: src-en/data/blueprints.xml.append:317
+msgid ""
+"data/blueprints.xml.append$//augBlueprint[@name=\"AUTOMATED_MANNING\"]/title"
+msgstr "Automated Manning Function"
+
+#: src-en/data/blueprints.xml.append:318
+msgid ""
+"data/blueprints.xml.append$//augBlueprint[@name=\"AUTOMATED_MANNING\"]/desc"
+msgstr "Mans ship systems. YOU SHOULD NEVER SEE THIS."
+
+#: src-en/data/blueprints.xml.append:340
+msgid ""
+"data/blueprints.xml.append$//augBlueprint[@name=\"AUTOMATED_REPAIR\"]/title"
+msgstr "Automated Repair Function"
+
+#: src-en/data/blueprints.xml.append:341
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"AUTOMATED_REPAIR\"]/desc"
+msgstr "Repairs ship systems. YOU SHOULD NEVER SEE THIS."
