--- a/locale/data/blueprints.xml.append/de.po
+++ b/locale/data/blueprints.xml.append/de.po
@@ -1,9 +1,16 @@
 #
 msgid ""
 msgstr ""
+"PO-Revision-Date: 2024-05-20 17:59+0000\n"
+"Last-Translator: Janosch Javurek <ppan71749@gmail.com>\n"
+"Language-Team: German <https://weblate.hyperq.be/projects/inferno-core/"
+"datablueprints-xml-append/de/>\n"
+"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 4.16.4\n"
 
 #: src-en/data/blueprints.xml.append:2
 msgid "data/blueprints.xml.append$//augBlueprint[@name=\"FAST_MIND\"]/title"
@@ -30,8 +37,7 @@ msgid "data/blueprints.xml.append$//augBlueprint[@name=\"FAST_HACK\"]/desc"
 msgstr "Verringert die Abklingzeit des Hackingsystems um 5 Sekunden."
 
 #: src-en/data/blueprints.xml.append:32
-msgid ""
-"data/blueprints.xml.append$//augBlueprint[@name=\"FAST_TEMPORAL\"]/title"
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"FAST_TEMPORAL\"]/title"
 msgstr "Temporal-Beschleuniger"
 
 #: src-en/data/blueprints.xml.append:33
@@ -39,8 +45,7 @@ msgid "data/blueprints.xml.append$//augBlueprint[@name=\"FAST_TEMPORAL\"]/desc"
 msgstr "Verringert die Abklingzeit des Temporalmanipulators um 5 Sekunden."
 
 #: src-en/data/blueprints.xml.append:42
-msgid ""
-"data/blueprints.xml.append$//augBlueprint[@name=\"FAST_TELEPORT\"]/title"
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"FAST_TELEPORT\"]/title"
 msgstr "Teleporter-Beschleuniger"
 
 #: src-en/data/blueprints.xml.append:43
@@ -80,13 +85,11 @@ msgid "data/blueprints.xml.append$//augBlueprint[@name=\"LONG_BATTERY\"]/desc"
 msgstr ""
 
 #: src-en/data/blueprints.xml.append:91
-msgid ""
-"data/blueprints.xml.append$//augBlueprint[@name=\"HACKING_DAMAGE\"]/title"
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"HACKING_DAMAGE\"]/title"
 msgstr ""
 
 #: src-en/data/blueprints.xml.append:92
-msgid ""
-"data/blueprints.xml.append$//augBlueprint[@name=\"HACKING_DAMAGE\"]/desc"
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"HACKING_DAMAGE\"]/desc"
 msgstr ""
 
 #: src-en/data/blueprints.xml.append:101
@@ -114,79 +117,65 @@ msgid "data/blueprints.xml.append$//augBlueprint[@name=\"FAST_WEAPONS\"]/desc"
 msgstr ""
 
 #: src-en/data/blueprints.xml.append:128
-msgid ""
-"data/blueprints.xml.append$//augBlueprint[@name=\"FASTER_WEAPONS\"]/title"
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"FASTER_WEAPONS\"]/title"
 msgstr ""
 
 #: src-en/data/blueprints.xml.append:129
-msgid ""
-"data/blueprints.xml.append$//augBlueprint[@name=\"FASTER_WEAPONS\"]/desc"
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"FASTER_WEAPONS\"]/desc"
 msgstr ""
 
 #: src-en/data/blueprints.xml.append:137
-msgid ""
-"data/blueprints.xml.append$//augBlueprint[@name=\"FASTEST_WEAPONS\"]/title"
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"FASTEST_WEAPONS\"]/title"
 msgstr ""
 
 #: src-en/data/blueprints.xml.append:138
-msgid ""
-"data/blueprints.xml.append$//augBlueprint[@name=\"FASTEST_WEAPONS\"]/desc"
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"FASTEST_WEAPONS\"]/desc"
 msgstr ""
 
 #: src-en/data/blueprints.xml.append:146
-msgid ""
-"data/blueprints.xml.append$//augBlueprint[@name=\"WEAPON_LOCKDOWN\"]/title"
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"WEAPON_LOCKDOWN\"]/title"
 msgstr ""
 
 #: src-en/data/blueprints.xml.append:147
-msgid ""
-"data/blueprints.xml.append$//augBlueprint[@name=\"WEAPON_LOCKDOWN\"]/desc"
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"WEAPON_LOCKDOWN\"]/desc"
 msgstr ""
 
 #: src-en/data/blueprints.xml.append:157
-msgid ""
-"data/blueprints.xml.append$//augBlueprint[@name=\"AUG_BEAM_PIERCE\"]/title"
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"AUG_BEAM_PIERCE\"]/title"
 msgstr ""
 
 #: src-en/data/blueprints.xml.append:158
-msgid ""
-"data/blueprints.xml.append$//augBlueprint[@name=\"AUG_BEAM_PIERCE\"]/desc"
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"AUG_BEAM_PIERCE\"]/desc"
 msgstr ""
 
 #: src-en/data/blueprints.xml.append:165
 msgid ""
-"data/blueprints.xml.append$//augBlueprint[@name=\"AUG_EVERYTHING_PIERCE\"]/"
-"title"
+"data/blueprints.xml.append$//augBlueprint[@name=\"AUG_EVERYTHING_PIERCE\"]/title"
 msgstr ""
 
 #: src-en/data/blueprints.xml.append:166
 msgid ""
-"data/blueprints.xml.append$//augBlueprint[@name=\"AUG_EVERYTHING_PIERCE\"]/"
-"desc"
+"data/blueprints.xml.append$//augBlueprint[@name=\"AUG_EVERYTHING_PIERCE\"]/desc"
 msgstr ""
 
 #: src-en/data/blueprints.xml.append:174
 msgid ""
-"data/blueprints.xml.append$//augBlueprint[@name=\"AUG_BEAM_PIERCE_DRONE\"]/"
-"title"
+"data/blueprints.xml.append$//augBlueprint[@name=\"AUG_BEAM_PIERCE_DRONE\"]/title"
 msgstr ""
 
 #: src-en/data/blueprints.xml.append:175
 msgid ""
-"data/blueprints.xml.append$//augBlueprint[@name=\"AUG_BEAM_PIERCE_DRONE\"]/"
-"desc"
+"data/blueprints.xml.append$//augBlueprint[@name=\"AUG_BEAM_PIERCE_DRONE\"]/desc"
 msgstr ""
 
 #: src-en/data/blueprints.xml.append:182
 msgid ""
-"data/blueprints.xml.append$//augBlueprint[@name=\"AUG_EVERYTHING_PIERCE_DRONE"
-"\"]/title"
+"data/blueprints.xml.append$//augBlueprint[@name=\"AUG_EVERYTHING_PIERCE_DRONE\"]/title"
 msgstr ""
 
 #: src-en/data/blueprints.xml.append:183
 msgid ""
-"data/blueprints.xml.append$//augBlueprint[@name=\"AUG_EVERYTHING_PIERCE_DRONE"
-"\"]/desc"
+"data/blueprints.xml.append$//augBlueprint[@name=\"AUG_EVERYTHING_PIERCE_DRONE\"]/desc"
 msgstr ""
 
 #: src-en/data/blueprints.xml.append:192
@@ -195,13 +184,11 @@ msgid ""
 msgstr ""
 
 #: src-en/data/blueprints.xml.append:193
-msgid ""
-"data/blueprints.xml.append$//augBlueprint[@name=\"RADIUS_REDUCTION\"]/desc"
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"RADIUS_REDUCTION\"]/desc"
 msgstr ""
 
 #: src-en/data/blueprints.xml.append:201
-msgid ""
-"data/blueprints.xml.append$//augBlueprint[@name=\"FIRE_IMMUNITY\"]/title"
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"FIRE_IMMUNITY\"]/title"
 msgstr ""
 
 #: src-en/data/blueprints.xml.append:202
@@ -224,52 +211,43 @@ msgid ""
 msgstr ""
 
 #: src-en/data/blueprints.xml.append:224
-msgid ""
-"data/blueprints.xml.append$//augBlueprint[@name=\"FMCORE_NO_BREACH\"]/desc"
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"FMCORE_NO_BREACH\"]/desc"
 msgstr ""
 
 #: src-en/data/blueprints.xml.append:232
-msgid ""
-"data/blueprints.xml.append$//augBlueprint[@name=\"FMCORE_NO_FIRE\"]/title"
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"FMCORE_NO_FIRE\"]/title"
 msgstr ""
 
 #: src-en/data/blueprints.xml.append:233
-msgid ""
-"data/blueprints.xml.append$//augBlueprint[@name=\"FMCORE_NO_FIRE\"]/desc"
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"FMCORE_NO_FIRE\"]/desc"
 msgstr ""
 
 #: src-en/data/blueprints.xml.append:241
 msgid ""
-"data/blueprints.xml.append$//augBlueprint[@name=\"FMCORE_ASTEROID_RESIST_HULL"
-"\"]/title"
+"data/blueprints.xml.append$//augBlueprint[@name=\"FMCORE_ASTEROID_RESIST_HULL\"]/title"
 msgstr ""
 
 #: src-en/data/blueprints.xml.append:242
 msgid ""
-"data/blueprints.xml.append$//augBlueprint[@name=\"FMCORE_ASTEROID_RESIST_HULL"
-"\"]/desc"
+"data/blueprints.xml.append$//augBlueprint[@name=\"FMCORE_ASTEROID_RESIST_HULL\"]/desc"
 msgstr ""
 
 #: src-en/data/blueprints.xml.append:251
 msgid ""
-"data/blueprints.xml.append$//augBlueprint[@name="
-"\"FMCORE_ASTEROID_RESIST_SHIELD\"]/title"
+"data/blueprints.xml.append$//augBlueprint[@name=\"FMCORE_ASTEROID_RESIST_SHIELD\"]/title"
 msgstr ""
 
 #: src-en/data/blueprints.xml.append:252
 msgid ""
-"data/blueprints.xml.append$//augBlueprint[@name="
-"\"FMCORE_ASTEROID_RESIST_SHIELD\"]/desc"
+"data/blueprints.xml.append$//augBlueprint[@name=\"FMCORE_ASTEROID_RESIST_SHIELD\"]/desc"
 msgstr ""
 
 #: src-en/data/blueprints.xml.append:291
-msgid ""
-"data/blueprints.xml.append$//augBlueprint[@name=\"AUTOMATED_SHIP\"]/title"
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"AUTOMATED_SHIP\"]/title"
 msgstr ""
 
 #: src-en/data/blueprints.xml.append:292
-msgid ""
-"data/blueprints.xml.append$//augBlueprint[@name=\"AUTOMATED_SHIP\"]/desc"
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"AUTOMATED_SHIP\"]/desc"
 msgstr ""
 
 #: src-en/data/blueprints.xml.append:317
@@ -288,6 +266,5 @@ msgid ""
 msgstr ""
 
 #: src-en/data/blueprints.xml.append:341
-msgid ""
-"data/blueprints.xml.append$//augBlueprint[@name=\"AUTOMATED_REPAIR\"]/desc"
+msgid "data/blueprints.xml.append$//augBlueprint[@name=\"AUTOMATED_REPAIR\"]/desc"
 msgstr ""
